Migrate Growatt service to Supabase Postgres (JPA) + Supabase JWT auth
W3b of the backend upgrade:
- Swap Spring Data MongoDB -> Spring Data JPA + PostgreSQL driver.
- JPA entities: solar_data_cache (composite key (type,plant_id,date)),
  notifications (auth_id uuid + jsonb meta), user_settings; repositories as
  JpaRepository.
- SolarBackfillJob now sources users from user_settings, decrypts the Growatt
  password from Vault via public.get_vault_secret(), inserts notification rows,
  and no longer sends push directly (the notifications->send-push webhook does).
- SecurityConfig: validate Supabase JWTs (ES256) via the project JWKS on all
  data routes (health/actuator public). Replaces permitAll and the old Node
  hardcoded-'anykey' verification.
- application-production.properties: Postgres datasource (Supavisor pooler) +
  JWKS uri; Mongo config removed.
- Remove UserAccount (+test) and UserAccountRepository.

mvn test green. Growatt v2.0.0 endpoint/DTO reshape (W3a) still to come.